--- a/Eks/App.config
+++ b/Eks/App.config
@@ -9,7 +9,8 @@
   </startup>
   <connectionStrings>
     <add name="EksEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SCORPIO-DM\SQLEXPRESS;initial catalog=Eks;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="EksEntities1" connectionString="metadata=res://*/ModelEks.csdl|res://*/ModelEks.ssdl|res://*/ModelEks.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SCORPIO-DM\SQLEXPRESS;initial catalog=Eks;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EksEntities1" connectionString="metadata=res://*/csdl|res://*/ssdl|res://*/msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SCORPIO-DM\SQLEXPRESS;initial catalog=Eks;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EksEntities2" connectionString="metadata=res://*/ModelEks.csdl|res://*/ModelEks.ssdl|res://*/ModelEks.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SCORPIO-DM\SQLEXPRESS;initial catalog=Eks;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
