--- a/Eks/Eks.csproj
+++ b/Eks/Eks.csproj
@@ -85,6 +85,12 @@
     <Compile Include="FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormLoginB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormLoginB.Designer.cs">
+      <DependentUpon>FormLoginB.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -143,6 +149,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormLoginB.resx">
+      <DependentUpon>FormLoginB.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
